<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/plano_fundo"
    android:foregroundTint="#FFFFFF"
    tools:context=".View.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#8BC34A"
            android:text="@string/tituloLogin"
            android:textAlignment="center"
            android:textSize="34sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/etUsuarioLogin"
        android:layout_width="321dp"
        android:layout_height="48dp"
        android:backgroundTint="#000000"
        android:ems="10"
        android:hint="Login"
        android:inputType="textPersonName"
        android:textAlignment="viewStart"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etSenhaLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.691" />

    <EditText
        android:id="@+id/etSenhaLogin"
        android:layout_width="321dp"
        android:layout_height="48dp"
        android:backgroundTint="#000000"
        android:ems="10"
        android:hint="Senha"
        android:inputType="textPassword"
        android:textAlignment="viewStart"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.398" />

    <Button
        android:id="@+id/btnLogar"
        android:layout_width="160dp"
        android:layout_height="65dp"
        android:onClick="Logar"
        android:text="@string/btnLogar"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSenhaLogin"
        app:layout_constraintVertical_bias="0.112" />

    <TextView
        android:id="@+id/tvCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:lineSpacingExtra="20sp"
        android:onClick="Cadastro"
        android:text="@string/cadastrar"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="#3F51B5"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogar"
        app:layout_constraintVertical_bias="0.023" />

</androidx.constraintlayout.widget.ConstraintLayout>